<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-93dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:text="Change Settings" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    app:contentPadding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gas_leak"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorDanger"
                            android:textSize="50sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:gravity="center"
                                android:text="@string/at"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:gravity="center"
                                android:text="@string/time"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/ic_action_name"
                    android:text="@string/fire_button" />

                <Button
                    android:id="@+id/button3"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/ic_action_name"
                    android:text="@string/emergency_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:contentPadding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sensor_reading"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="@color/colorDanger"
                            android:textSize="70sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/ic_circle" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/leak_detected" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/ic_circle2" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/not_detected" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    app:contentPadding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/graph_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="18sp" />

                        <com.jjoe64.graphview.GraphView
                            android:id="@+id/graph"
                            android:layout_width="348dp"
                            android:layout_height="500dp"
                            tools:ignore="InvalidId" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    app:contentPadding="15dp">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:divider="@color/colorPrimaryDark"
                        android:showDividers="middle|beginning|end">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15px">

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="176dp"
                                android:layout_height="wrap_content"
                                android:text="Sensor"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="104dp"
                                android:layout_height="wrap_content"
                                android:text="Status: TBD"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp"
                                android:textColor="@color/blue"/>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15px">

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Scheduled Muting"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TBD"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp"
                                android:textColor="@color/blue" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15px">

                            <TextView
                                android:id="@+id/textView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Alarm"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Status: ON"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp"
                                android:textColor="@color/blue" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="15px">

                            <TextView
                                android:id="@+id/textView17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Device ID"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="TBD"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                android:textSize="18sp"
                                android:textColor="@color/blue" />
                        </TableRow>


                    </TableLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>